Bug 269726 - Reformat source with "Custom script formatter" just removes text.
Summary: Reformat source with "Custom script formatter" just removes text.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: ident (other bugs)
Version First Reported In: git master
Platform: Unlisted Binaries Linux
: VHI critical
Target Milestone: 4.2.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-29 21:33 UTC by Dmitry
Modified: 2011-04-05 00:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry 2011-03-29 21:33:01 UTC
Version:           git master (using KDE 4.6.1) 
OS:                Linux

Go to settings, select "Source Formatter"->C++->"Custom Script Formatter"->anything.

Open a file with code

int main(void) {
	int i;
}

select the code, open right-click menu and select "Reformat source". The code is deleted instead of being reformatted.

Reproducible: Always
Comment 1 Milian Wolff 2011-03-30 00:17:08 UTC
yeah, seems to be completely broken - the preview also only shows empty text...
Comment 2 Dmitry 2011-04-05 00:03:19 UTC
Git commit fb77c2121434cb4024d250e881a04a56c7148d5e by Dmitry Risenberg.
Committed on 05/04/2011 at 00:06.
Pushed by risenberg into branch 'master'.

Recognize predefined styles in indent plugin.

BUG: 269726

M  +37   -14   formatters/indent/indent_plugin.cpp     
M  +1    -0    formatters/indent/indent_plugin.h     

http://commits.kde.org/kdevelop/fb77c2121434cb4024d250e881a04a56c7148d5e