Recognize predefined styles in indent plugin.

BUG: 269726